# ai-devs-3

./: .gitignore  .python-version  pyproject.toml
common/: ai_helpers.py  local_llm_helper.py  report_helpers.py
s01e01/: anti_captcha_login.py
s01e02/: verification.py
s01e03/: report.py
s01e04/: maze.txt
s01e05/: cenzored_external.py  cenzored_local.py
s02e01/: find_street_from_mp3.py
s02e03/: image_robot.py
s02e04/: categories.py
s03e01/: documents_report.py
s03e02/: vectors.py
s03e03/: database.py
s03e04/: barbara.py
s03e05/: graph.py
s04e01/: barbara_photos.py  secret_barbara.py
s04e02/: prepare_jsonl.py  research.py  training_data.jsonl  training_data_80.jsonl  training_validation_jsonl.py  validation_data_20.jsonl  verify.txt
s04e03/: secret_softo.py  softo.py
s04e04/: webhook.py
s05e02/: gps.py
s05e03/: rafal.py
s05e04/: hearth.py
