[project]
name = "ai-devs-3"
version = "0.1.0"
description = "AI Development Tasks and Utilities"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "langfuse>=0.1.0",
    "openai>=0.1.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.0.0",
    "ollama>=0.1.0",
    "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]